--- a/content/rules/_index.html
+++ b/content/rules/_index.html
@@ -39,7 +39,7 @@ quote = """
                 <li>Reputation</li>
             </ul>
         </li>
-        <li>Combat : 
+        <li><a href="combat">Combat</a> : 
             <ul>
                 <li>Rounds & Initiative</li>
                 <li>Zones & Range</li>
