--- a/content/archetypes/_index.html
+++ b/content/archetypes/_index.html
@@ -10,5 +10,5 @@ quote = """
 <div style="display: flex; justify-content: space-between; flex-direction: row; width: 100%;">
 </div>
 <div>
-    
+    {{< iterate-section index=races >}}    
 </div>
