--- a/content/rules/_index.html
+++ b/content/rules/_index.html
@@ -24,14 +24,9 @@ quote = """
                 <li>Attributes</li>
                 <li>Skills</li>
                 <li>Talents</li>
-                <li>Pride</li>
-                <li>Dark Secret</li>
-                <li>Relationships</li>
+                <li>Personality Traits</li>
                 <li>Gear</li>
-                <li>Consumables</li>
                 <li>Experience</li>
-                <li>Development</li>
-                <li>Reputation</li>
             </ul>
         </li>
         <li><a href="combat">Combat</a> : 
@@ -40,9 +35,7 @@ quote = """
                 <li>Zones & Range</li>
                 <li>Melee/Ranged Combat</li>
                 <li>Weapons</li>
-                <li>Damage</li>
-                <li>Conditions</li>
-                <li>Recovery</li>
+                <li>Health & Damage</li>
             </ul>
         </li>
     </ul>
