--- a/content/rules/_index.html
+++ b/content/rules/_index.html
@@ -29,6 +29,19 @@ quote = """
                 <li>Experience</li>
             </ul>
         </li>
+        <li><a href="skills">Skills</a>:
+            <ul>
+                <li>Roll the Dice</li>
+                <li>Pushing your roll</li>
+                <li>Modifications</li>
+                <li>Difficulty</li>
+                <li>Opposed Rolls</li>
+                <li>NPCs and skills</li>
+                <li>Specialization</li>
+                <li>Expertise</li>
+                <li>List of Skills</li>
+            </ul>            
+        </li>
         <li><a href="combat">Combat</a> : 
             <ul>
                 <li>Rounds & Initiative</li>
