--- a/content/rules/characters.html
+++ b/content/rules/characters.html
@@ -72,15 +72,15 @@ quote = """
     <h2>Willpower</h2>    
     <p>
         <b>Willpower</b> is a resource that you can spend to use the character's special abilities and talents.<br/>
+        You gain 1 <b>Willpower</b> for every two successes you achieve on a roll. <br/>
         The maximum <b>Willpower</b> a character can have at any time is equal to the <b>MIND</b> score plus the amount of <b>Victory Points</b>.<br/>
         After <i>resting</i>, <b>Willpower</b> always resets to a value equal to the character's <b>MIND</b> score.
     </p>
     <h2>Stress</h2>
     <p>
         <b>Stress</b> represents your mental and emotional resilience. You can accumulate <b>Stress</b> up to your <b>SOUL</b> score without any effect. <br/>
-        Any <b>Stress</b> above the character's <b>SOUL</b> score, adds <b>Stress</b> dice to your rolls. <br/>
-        When a <b>Stress</b> die results a success, this success is <b>NOT</b> added to your success total, however the character gains 1 <b>WP</b>. <br/>
-        When a <b>Stress</b> die results on a failure, this is a <b>critical failure</b>, and the character gains a <b>condition</b>.<br/>
+        Any <b>Stress</b> above the character's <b>SOUL</b> score, adds <b>Stress</b> dice to your <i>push</i> rolls. <br/>
+        When a <b>Stress</b> die results on a failure, this is a <b>critical failure</b>, and the character gains a <b>Condition</b>.<br/>
         After <i>resting</i>, <b>Stress</b> always resets to 0.
     </p>
 </div>
